--- a/DockerFile
+++ b/DockerFile
@@ -11,4 +11,4 @@ COPY target/ejemploREST-0.0.1-SNAPSHOT.jar /app
 EXPOSE 9000
  
 #Comando que se ejecutará una vez ejecutemos el contendor
-CMD ["java","-jar","gs-spring-boot-docker-0.1.0.jar"]
+CMD ["java","-jar","ejemploREST-0.0.1-SNAPSHOT.jar"]
